Some code clean-up

--- a/src/Nosology.Web.App/Views/Account/Index.cshtml
+++ b/src/Nosology.Web.App/Views/Account/Index.cshtml
@@ -46,7 +46,7 @@
 
                 <!-- MDL Spinner Component with Single Color -->
                 <div class="mdl-spinner mdl-spinner--single-color mdl-js-spinner"
-                     style="float:right; margin-top: 44px; margin-right: 75px;">
+                     style="float:right; margin-top: 44px; margin-right:20%;">
                 </div>
             }
 
@@ -57,3 +57,7 @@
     <div class="mdl-cell mdl-cell--1-col mdl-cell--hide-phone mdl-cell--hide-tablet"></div>
 
 </div>
+
+@section Scripts {
+    <script src="~/Scripts/login.min.js"></script>
+}
