--- a/src/Nosology.Web.App/Views/Shared/_Default.cshtml
+++ b/src/Nosology.Web.App/Views/Shared/_Default.cshtml
@@ -21,7 +21,7 @@
     <title>@ViewBag.Title – "Высокозатратные нозологии - "</title>
 
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    @*@Scripts.Render("~/bundles/modernizr")*@
 
     <!-- fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
@@ -63,14 +63,13 @@
         </div><!-- / #LAYOUT -->
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
+    @*@Scripts.Render("~/bundles/jquery")*@
+
     @Scripts.Render("~/bundles/mdl")
     @RenderSection("scripts", required: false)
 
     <!-- Ajax library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-
-    <script src="~/Scripts/login.js"></script>
+    @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>*@
 
     <!--[if IE]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.1.7/es5-shim.min.js"></script>
